--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,8 @@ header .logo
 {
   position: absolute;
   z-index: 10;
-  bottom: 20px;
+  bottom: 110px;
+  right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
